--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "^2.1.0",
@@ -35,6 +37,7 @@
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^6.0.0",
     "@types/pdfkit": "^0.17.4",
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
