refactor: transição completa de terminologia clínica para varejo e melhorias no estoque
- 🔄 Refatoração: Substituição de termos clínicos por termos de varejo (ex: "Paciente" → "Cliente", "Consultório" → "Showroom/Escritório") em toda a UI e backend.
- 📦 Estoque:
    - Implementação de histórico detalhado de movimentações (Entradas, Saídas, Ajustes).
    - Melhoria na gestão de lotes com inclusão de preço de custo e estoque mínimo/ideal.
    - Otimização do parser de NFe (XML) para importação automática de notas fiscais.
    - Adição de validações rigorosas (ex: data de validade futura para lotes).
- 🎨 UI/UX:
    - Atualização do Sidebar com novos ícones e inclusão do logo MOA NEXUS.
    - Nova página de Histórico de Movimentações de Estoque.
    - Feedback visual para campos obrigatórios e formulários responsivos.
- 🔒 Segurança: Refinamento dos Guards de Tenant e Cliente para garantir isolamento multi-tenant.
- 📝 Docs: Atualização da arquitetura (ARCHITECTURE.md) e scripts de setup.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clinicos",
   "version": "1.0.0",
-  "description": "ClinicOS - Multi-tenant ERP for clinics",
+  "description": "MOA NEXUS - Multi-tenant ERP for clinics",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
